terraform-prod/modules/vpc/vpc.tf
resource "aws_vpc" "main" {
  cidr_block = var.cidr_vpc

  tags = {
    Name = var.vpcname
  }
}
